--- a/templates/shop/subcategory_detail.html
+++ b/templates/shop/subcategory_detail.html
@@ -18,7 +18,7 @@
 
                             {{ product.short_description }}
                         </p>
-{#                        <a href="{% url 'product_detail' product.slug %}" class="btn btn-primary">More</a>#}
+<a href="{% url 'cart_add' product.id %}" class="btn btn-primary">Add to card</a>
                     </div>
                 </div>
             </div>
