--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,18 @@
 </head>
 <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-normal">Online store</h5>
+    <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{% url 'index' %}">Online store</a></h5>
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="{% url 'category_list' %}">Categories</a>
-        <a class="p-2 text-dark" href="#">Products</a>
+        <a class="p-2 text-dark" href="{% url 'order_list' %}">Orders</a>
         <a class="p-2 text-dark" href="{% url 'cart_detail' %}">Cart - {{ request.session.cart|length }}</a>
     </nav>
-    <a class="btn btn-outline-primary" href="#">Sign up</a>
+    {% if request.user.is_authenticated %}
+        <a  class="p-2 text-dark">{{ request.user.username }}</a>
+        <a class="btn btn-outline-primary" href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a class="btn btn-outline-primary" href="{% url 'account_login' %}">Login</a>
+    {% endif %}
 </div>
 <div class="container">
 
